[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/HeartbitXX.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/game_over/GameOver.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 300.0
margin_top = 150.0
margin_right = 211.0
margin_bottom = 133.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 209.0
margin_bottom = 266.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 209.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerfectLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 209.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "Perfect:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoodLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 209.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "Good:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkayLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 209.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "Okay:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestCombo" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 209.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "Max Combo:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 300.0
margin_right = 360.0
margin_bottom = 266.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HBoxContainer/ValueContainer"]
margin_right = 60.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerfectLabel" type="Label" parent="HBoxContainer/ValueContainer"]
margin_top = 54.0
margin_right = 60.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoodLabel" type="Label" parent="HBoxContainer/ValueContainer"]
margin_top = 108.0
margin_right = 60.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkayLabel" type="Label" parent="HBoxContainer/ValueContainer"]
margin_top = 162.0
margin_right = 60.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxCombo" type="Label" parent="HBoxContainer/ValueContainer"]
margin_top = 216.0
margin_right = 60.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
